[gd_scene load_steps=26 format=3 uid="uid://c26p4g24bvp1b"]

[ext_resource type="Texture2D" uid="uid://w64qf1l51pro" path="res://aaasets/death_medium/death1.png" id="2_icwjr"]
[ext_resource type="PackedScene" uid="uid://cy55rnq6ydyoa" path="res://scene/particles/spark/spark_grenade.tscn" id="2_jtc5y"]
[ext_resource type="Texture2D" uid="uid://cnmwmukt4r1ak" path="res://aaasets/death_medium/death2.png" id="3_jtc5y"]
[ext_resource type="Texture2D" uid="uid://dh5yocgdi8fh1" path="res://aaasets/death_medium/death3.png" id="4_n10n7"]
[ext_resource type="Texture2D" uid="uid://2dkpggj5qb5c" path="res://aaasets/death_medium/death4.png" id="5_rjj0y"]
[ext_resource type="Texture2D" uid="uid://cewlqb3ru73vo" path="res://aaasets/death_medium/death5.png" id="6_8i1ql"]
[ext_resource type="Texture2D" uid="uid://cnrktds1o5akq" path="res://aaasets/items/grenade_green.png" id="7_dv6eb"]
[ext_resource type="Texture2D" uid="uid://ld5i5ck53kw4" path="res://aaasets/death_medium/death6.png" id="7_epxk5"]
[ext_resource type="Texture2D" uid="uid://bjsvo5oiotnl" path="res://aaasets/death_medium/death7.png" id="8_go42h"]
[ext_resource type="Script" uid="uid://djd2cq7uvlvls" path="res://scene/rashodniki/grenade/grenade_green.gd" id="8_qsg8o"]
[ext_resource type="Texture2D" uid="uid://bk4v45w5blolg" path="res://aaasets/death_medium/death8.png" id="9_3ngg0"]
[ext_resource type="Texture2D" uid="uid://dche0iwpqd83l" path="res://aaasets/death_medium/death9.png" id="10_0dqgv"]
[ext_resource type="Texture2D" uid="uid://7mqvjpn73a6b" path="res://aaasets/death_medium/death10.png" id="11_1h37s"]
[ext_resource type="Texture2D" uid="uid://da1whvqxu6sn3" path="res://aaasets/death_medium/death11.png" id="12_2bm60"]
[ext_resource type="Texture2D" uid="uid://ccjgp3cmwrx3l" path="res://aaasets/death_medium/death12.png" id="13_hm573"]
[ext_resource type="Texture2D" uid="uid://dwky7kt6q1281" path="res://aaasets/death_medium/death13.png" id="14_2t8cn"]
[ext_resource type="Texture2D" uid="uid://dax5i6e55weu6" path="res://aaasets/items/grenade/boom_radius/boom_radius1.png" id="17_3ngg0"]
[ext_resource type="Texture2D" uid="uid://cx31en8g2c5g3" path="res://aaasets/items/grenade/boom_radius/boom_radius2.png" id="18_0dqgv"]
[ext_resource type="Texture2D" uid="uid://cegwpai7737yv" path="res://aaasets/items/grenade/boom_radius/boom_radius3.png" id="19_1h37s"]
[ext_resource type="Texture2D" uid="uid://bdxbeehg7w8jm" path="res://aaasets/items/grenade/boom_radius/boom_radius4.png" id="20_2bm60"]
[ext_resource type="Texture2D" uid="uid://u0udq8d287su" path="res://aaasets/items/grenade/boom_radius/boom_radius5.png" id="21_hm573"]
[ext_resource type="Texture2D" uid="uid://cltragj2p6imk" path="res://aaasets/items/grenade/boom_radius/boom_radius6.png" id="22_2t8cn"]

[sub_resource type="SpriteFrames" id="SpriteFrames_vmjax"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_icwjr")
}, {
"duration": 1.0,
"texture": ExtResource("3_jtc5y")
}, {
"duration": 1.0,
"texture": ExtResource("4_n10n7")
}, {
"duration": 1.0,
"texture": ExtResource("5_rjj0y")
}, {
"duration": 1.0,
"texture": ExtResource("6_8i1ql")
}, {
"duration": 1.0,
"texture": ExtResource("7_epxk5")
}, {
"duration": 1.0,
"texture": ExtResource("8_go42h")
}, {
"duration": 1.0,
"texture": ExtResource("9_3ngg0")
}, {
"duration": 1.0,
"texture": ExtResource("10_0dqgv")
}, {
"duration": 1.0,
"texture": ExtResource("11_1h37s")
}, {
"duration": 1.0,
"texture": ExtResource("12_2bm60")
}, {
"duration": 1.0,
"texture": ExtResource("13_hm573")
}, {
"duration": 1.0,
"texture": ExtResource("14_2t8cn")
}],
"loop": true,
"name": &"death",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_dv6eb")
}],
"loop": true,
"name": &"idle",
"speed": 0.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_oxjrm"]
radius = 144.88617

[sub_resource type="SpriteFrames" id="SpriteFrames_oxjrm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("17_3ngg0")
}, {
"duration": 1.0,
"texture": ExtResource("18_0dqgv")
}, {
"duration": 1.0,
"texture": ExtResource("19_1h37s")
}, {
"duration": 1.0,
"texture": ExtResource("20_2bm60")
}, {
"duration": 1.0,
"texture": ExtResource("21_hm573")
}, {
"duration": 1.0,
"texture": ExtResource("22_2t8cn")
}],
"loop": true,
"name": &"default",
"speed": 14.0
}]

[node name="GrenadeGreen" type="Area2D" groups=["boosts"]]
top_level = true
z_index = 10
script = ExtResource("8_qsg8o")
spark_grenade_scene = ExtResource("2_jtc5y")

[node name="LifeTime" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.4, 0.4)
sprite_frames = SubResource("SpriteFrames_vmjax")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_oxjrm")

[node name="BoomRadius" type="AnimatedSprite2D" parent="."]
visible = false
scale = Vector2(8, 8)
sprite_frames = SubResource("SpriteFrames_oxjrm")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="LifeTime" to="." method="_on_life_time_timeout"]
